more edits to main game section

--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -23,6 +23,7 @@ header {
     border: dashed;
     border-color: black;
     border-width: 2px;
+    justify-content: center;
 }
 
 footer {
@@ -30,4 +31,9 @@ footer {
     border: dashed;
     border-color: black;
     border-width: 2px;
+}
+button {
+    padding: 0px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
